<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fontBg"
    android:orientation="vertical"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    >

    <include layout="@layout/layout_head"/>


    <ImageView
        style="@style/LineStyle"
        />
    <ImageView
        style="@style/LineStyle"
        android:layout_marginTop="@dimen/base15dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/base44dp"

        android:background="@color/text_color_white"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/base15dp"
            android:layout_weight="1"
            android:gravity="left|center"
            android:text="@string/forget_tel"

            android:textColor="@color/text_color_black"
            android:textSize="@dimen/base15dp"
            />

        <EditText
            android:id="@+id/et_message_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/base5dp"
            android:layout_weight="4"
            android:background="@null"
            android:hint="@string/forget_please_tel"
            android:digits="0123456789"
            android:maxLength="13"
            android:inputType="phone"
            android:textColorHint="@color/text_color_gray"
            android:textSize="@dimen/base15dp"
            />
    </LinearLayout>

    <ImageView
        style="@style/LineStyle"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/base44dp"
        android:background="@color/text_color_white"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/base15dp"
            android:layout_weight="1"
            android:gravity="left|center"
            android:text="@string/forget_code"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/base15dp"
            />

        <EditText
            android:id="@+id/et_message_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/base5dp"
            android:layout_weight="2"
            android:background="@null"
            android:hint="@string/forget_please_code"
            android:textColorHint="@color/text_color_gray"
            android:textSize="@dimen/base15dp"
            />

        <ImageView
            android:layout_width="@dimen/base1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/base5dp"
            android:layout_marginTop="@dimen/base5dp"
            android:background="@color/lineColor"
            />

        <TextView
            android:id="@+id/tv_message_getCode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/base14dp"
            android:layout_weight="1.8"
            android:gravity="center"
            android:text="@string/forget_get_code"
            android:singleLine="true"
            android:textColor="@color/text_color_theme_blue"
            android:textSize="@dimen/base15dp"
            />
    </LinearLayout>
    <ImageView
        style="@style/LineStyle"
        />

    <Button
        android:id="@+id/bt_message_next"
        style="@style/app_button"
        android:text="@string/forget_next"
        android:background="@drawable/btn_background_selector"
        />

</LinearLayout>
