<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_head" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/base100dp">


        <TextView
            android:id="@+id/tv_time_start"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base52dp"
            android:layout_marginLeft="@dimen/base15dp"
            android:drawableLeft="@mipmap/ic_time_start"
            android:drawablePadding="@dimen/base15dp"
            android:gravity="center_vertical"
            android:text="@string/start_time"
            android:textSize="@dimen/base15dp" />

        <TextView
            android:id="@+id/tv_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/base10dp"
            android:drawableTop="@mipmap/reset"
            android:text="@string/reset" />

        <TextView
            android:id="@+id/tv_time_end"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base52dp"
            android:layout_below="@+id/tv_time_start"
            android:layout_marginLeft="@dimen/base15dp"
            android:drawableLeft="@mipmap/ic_time_end"
            android:drawablePadding="@dimen/base15dp"
            android:gravity="center_vertical"
            android:text="@string/end_time"
            android:textSize="@dimen/base15dp"

            />
    </RelativeLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
            android:id="@+id/trl_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_electric_box"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>


        <TextView
            android:id="@+id/tv_record_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@mipmap/alarm_no_data"
            android:gravity="center"
            android:text="@string/no_data"
            android:textColor="@color/text_color_hind" />

    </FrameLayout>


</LinearLayout>