<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ly_background_color"
    android:orientation="vertical">

    <include layout="@layout/layout_head" />

    <ImageView
        style="@style/LineStyle"
        android:layout_marginTop="@dimen/base15dp" />

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/base44dp"


        android:background="@color/white">

        <TextView
            android:id="@+id/textView0"
            style="@style/install_text"
            android:text="@string/tv_ring_main_name" />

        <com.hzwc.intelligent.lock.model.spinner.NiceSpinner
            android:id="@+id/np_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBaseline="@+id/textView0"
            android:layout_alignBottom="@+id/textView0"
            android:layout_toEndOf="@+id/textView0"
            android:layout_toRightOf="@+id/textView0"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/please_choice_state"
            android:textColor="@color/color_black"
            android:textSize="@dimen/base15dp" />



    </RelativeLayout>

    <ImageView style="@style/LineStyle" />


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/base44dp"


        android:background="@color/white">

        <TextView
            android:id="@+id/textView"
            style="@style/install_text"
            android:text="@string/tv_ring_main_name" />

        <EditText
            android:id="@+id/et_ring_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBaseline="@+id/textView"
            android:layout_alignBottom="@+id/textView"
            android:layout_marginLeft="@dimen/base20dp"
            android:layout_toEndOf="@+id/textView"
            android:layout_toRightOf="@+id/textView"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/please_input_ring_name"
            android:textColor="@color/color_black"
            android:textSize="@dimen/base15dp" />


        <ImageView
            android:id="@+id/tv_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/base15dp"
            android:src="@mipmap/ic_ocr_picture" />

    </RelativeLayout>

    <ImageView style="@style/LineStyle" />

    <RelativeLayout
        android:id="@+id/rl_ring_location"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base44dp"

        android:background="@color/white">

        <TextView
            android:id="@+id/textView2"
            style="@style/install_text"
            android:text="@string/tv_ring_main_location" />

        <TextView
            android:id="@+id/tv_ring_location"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_marginLeft="@dimen/base20dp"
            android:layout_toEndOf="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/please_chose_ring_location"
            android:textColor="@color/color_black"
            android:textSize="@dimen/base15dp" />

        <ImageView

            style="@style/install_image"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:src="@mipmap/ic_next_right" />
    </RelativeLayout>



    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <Spinner
           android:id="@+id/sp"
            android:layout_width="match_parent"
            android:layout_height="40dp">

        </Spinner>
    </RelativeLayout>






    <ImageView style="@style/LineStyle" />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:visibility="gone" />


</LinearLayout>
